--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@
     border-radius: 2px 2px 2px 2px;
     margin: 2em 2em ;
     padding: 2em 2em;
+    display: flex;
+    flex-flow: row;
 }
 
 
@@ -12,3 +14,5 @@
 .head{
     text-align: center;
 }
+
+
