--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,10 @@
     float: right;
 }
 .enter-name-field{
+    margin-top: 19px;
     height: 20px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 
@@ -49,8 +52,18 @@ body{
     margin: 2em 2em 2em 2em;
     padding: 1em 1em 1em 1em;
 }
+.center{
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-flow: row;
+}
 
-@media only screen and (max-width :555px){
+label{
+    margin: 1em 1em;
+}
+
+@media only screen and (max-width :668px){
 .greet-div-top{
     display: flex;
     flex-flow: column;
@@ -66,6 +79,10 @@ body{
 .label ,.button{
     margin-left: auto;
     margin-right: auto;
+}
+.center{
+    display: flex;
+    flex-flow: column;
 }
     
 }
