--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
 }
 
 h1,h4{
-    font-family: fantasy;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 .counter_label{
     display: flex;
