--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 .greet-header, .greet-div-top{
     border-style: solid;
     border-color: slategray;
-    border-width: 2px;    
+    border-width: 4px;    
     border-radius: 2px 2px 2px 2px;
     margin: 20px 20% ;
     padding: 2em 2em;
@@ -11,7 +11,7 @@
 .radio-greet-btn{
     border-style: solid;
     border-color: slategray;
-    border-width: 2px;    
+    border-width: 4px;       
     border-radius: 2px 2px 2px 2px;
     margin: 20px 20% ;
     padding: 2em 2em;
@@ -19,17 +19,22 @@
     flex-flow: row;
 }
 
+
 h1,h4{
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-align: center;
+
 }
 .counter_label{
+    border-width: 4px;    
     display: flex;
     flex-flow: row;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 7px;
+    margin-right: 100;
 }
 
 .greetCtrl{
+    border-width: 4px;    
     display: flex;
 }
 .enter-name-field{
@@ -53,16 +58,18 @@ h1,h4{
 .output_div{
     border-style: solid;
     border-color: slategray;
-    border-width: 2px;    
-    border-radius: 2px 2px 2px 2px;
+    border-width: 4px;    
+    border-radius: 5px 5px 5px 5px;
     margin:  20px 20% ;
     padding: 2em 2em;
 }
 body{
-    margin: 2em 2em 2em 2em;
+    box-shadow: 5px 5px 3px 3px lightslategray;
+    margin: 2em 1em 2em 1em;
     padding: 1em 1em 1em 1em;
 }
 .center{
+    
     margin-left: auto;
     margin-right: auto;
     display: flex;
@@ -77,18 +84,19 @@ label{
 .greet-div-top{
     display: flex;
     flex-flow: column;
+    
 }
 .radio-greet-btn{
     display: flex;
     flex-flow: column;
-    margin-left: auto;
-    margin-right: auto;
-    margin: 2em 2em ;
-    padding: 2em 2em;
+    /* margin-left: auto;
+    margin-right: auto; */
+    /* margin: 2em 2em ;
+    padding: 2em 2em; */
 }
-.label ,.button{
-    margin-left: auto;
-    margin-right: auto;
+.label ,.button ,.counter_label{
+    margin-left: 84px;
+    margin-right: 26px;
 }
 .center{
     display: flex;
