--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,10 @@
     border-color: slategray;
     border-width: 4px;    
     border-radius: 2px 2px 2px 2px;
-    margin: 30px 30px ;
+    margin: 30px 30px 30px 30px;
     padding: 2em 2em;
     display: flex;
-    flex-flow: row;
+    flex-flow: column;
 }
 .radio-greet-btn{
     border-style: solid;
@@ -15,24 +15,40 @@
     border-radius: 2px 2px 2px 2px;
     margin: 30px 30px ;
     padding: 2em 2em;
-    display: flex;
-    flex-flow: row;
+    /* display: flex;
+    flex-flow: row; */
 }
 .error_div{
-    display: inline;
-    initial-letter-align: inherit;
-
+    /* animation: error_div ease 8s;
+    animation-play-state: paused; */
     
+
     color: red;
+    
     margin-left: auto;
     margin-right: auto;
-    background-color: salmon;
+    
     padding:0px 0px 0px 0px;
     margin: 0px 0px 0px 0px;
+    
+    
+    text-align: center;
+    
+    
+    
+    
    
 
 
 }
+@keyframes error_div {
+    100% {
+      opacity:0;
+    }
+    0% {
+      opacity:1;
+    }
+  }
 
 
 h1,h4{
@@ -51,10 +67,11 @@ h1,h4{
 .greetCtrl{
     border-width: 4px;    
     display: flex;
+    flex-flow: row;
 }
 .enter-name-field{
     margin-top: 19px;
-    height: auto;
+    
     margin-left: 5px;
     margin-right: 5px;
 }
@@ -69,6 +86,8 @@ h1,h4{
 .span-name{
     display: flex;
     flex-flow: row;
+    padding: 0px 0px 0px 0px;
+    margin: 0px 0px 0px 0px;
 }
 .output_div{
     border-style: solid;
@@ -85,6 +104,7 @@ body{
     margin: 2em 1em 2em 1em;
     padding: 1em 1em 1em 1em;
     border-radius: 19px 19px 19px 19px;
+    height: auto;
 }
 .center{
     
@@ -105,38 +125,40 @@ label{
 
 
 @media only screen and (max-width :828px){
-.greet-div-top{
+ .greet-div-top{
     display: flex;
     flex-flow: column;
     
 }
 .radio-greet-btn{
     display: flex;
-    flex-flow: column;
-    /* margin-left: auto;
-    margin-right: auto; */
-    /* margin: 2em 2em ;
-    padding: 2em 2em; */
-}
+    flex-flow: row; 
+    margin-left: auto;
+    margin-right: auto;
+    margin: 2em 2em ;
+    padding: 2em 2em;
+} 
 .label ,.button ,.counter_label{
-    margin-left: 84px;
-    margin-right: 26px;
+     margin-left: 84px;
+     margin-right: 26px;  
 }
 .center{
-    display: flex;
-    flex-flow: column;
+     display: flex;
+    flex-flow: column; 
 }
 
 .center-b{
     display: flex;
     margin-left: auto;
-    margin-right: auto;
+    margin-right: auto; 
 }
-.span-name{
+ .span-name{
+    display: flex;
+    flex-flow: column;
     margin-left: auto;
     margin-right: auto;
-}
-    
+} 
+     
 }
 
 
