--- a/css/style.css
+++ b/css/style.css
@@ -33,13 +33,10 @@
     
     
     text-align: center;
-    
-    
-    
-    
-   
 
-
+}
+.para{
+    float: right;
 }
 @keyframes error_div {
     100% {
