--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
     border-color: slategray;
     border-width: 4px;       
     border-radius: 2px 2px 2px 2px;
-    margin: 30px 30px ;
+    margin: auto auto ;
     padding: 2em 2em;
     /* display: flex;
     flex-flow: row; */
@@ -36,7 +36,7 @@
 
 }
 .para{
-    float: right;
+    float: left;
 }
 @keyframes error_div {
     100% {
@@ -57,7 +57,7 @@ h1,h4{
     border-width: 4px;    
     display: flex;
     flex-flow: row;
-    margin-left: 7px;
+    
     margin-right: 100;
 }
 
@@ -67,10 +67,10 @@ h1,h4{
     flex-flow: row;
 }
 .enter-name-field{
-    margin-top: 19px;
     
-    margin-left: 5px;
-    margin-right: 5px;
+    
+    /* margin-left: auto;
+    margin-right: auto; */
 }
 
 
@@ -84,44 +84,31 @@ h1,h4{
     display: flex;
     flex-flow: row;
     padding: 0px 0px 0px 0px;
-    margin: 0px 0px 0px 0px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .output_div{
     border-style: solid;
     border-color: slategray;
     border-width: 4px;    
     border-radius: 5px 5px 5px 5px;
-    margin:  30px 30px ;
+    margin-left:30% ;
+    margin-right:30%;
     padding: 2em 2em;
     text-transform: capitalize;
     
 }
-body{
-    box-shadow: 5px 5px 4px 4px lightslategray;
-    margin: 2em 1em 2em 1em;
-    padding: 1em 1em 1em 1em;
-    border-radius: 19px 19px 19px 19px;
-    height: auto;
-}
-.center{
-    
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    flex-flow: row;
-}
 
-label{
-    margin: 1em 1em;
-}
 
+
+/* 
 .center-b{
     display: flex;
     
-}
+} */
 
 
-@media only screen and (max-width :828px){
+/* @media only screen and (max-width :828px){
  .greet-div-top{
     display: flex;
     flex-flow: column;
@@ -135,10 +122,7 @@ label{
     margin: 2em 2em ;
     padding: 2em 2em;
 } 
-.label ,.button ,.counter_label{
-     margin-left: 84px;
-     margin-right: 26px;  
-}
+
 .center{
      display: flex;
     flex-flow: column; 
@@ -156,6 +140,6 @@ label{
     margin-right: auto;
 } 
      
-}
+} */
 
 
