--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,8 @@
     margin-right: auto;
     
     padding:0px 0px 0px 0px;
-    margin: 0px 0px 0px 0px;
+    height: 20px;
+    
     
     
     text-align: center;
@@ -58,21 +59,42 @@ h1,h4{
     display: flex;
     flex-flow: row;
     
-    margin-right: 100;
+    /* margin-right: 100; */
 }
 
 .greetCtrl{
     border-width: 4px;    
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
     flex-flow: row;
 }
 .enter-name-field{
     
-    
-    /* margin-left: auto;
-    margin-right: auto; */
+    width: 100px;
+    height: 7px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
+.middle{
+    display: flex;
+    flex-flow: row;
+    margin-left: auto;
+
+    margin-right: auto;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    
+    height: auto;
+    width: 60%;
+}
+label, .button{
+    margin-left: auto;
+    margin-right:auto; 
+    display: flex;
+    
+}
 
 .head{
     text-align: center;
@@ -83,13 +105,14 @@ h1,h4{
 .span-name{
     display: flex;
     flex-flow: row;
-    padding: 0px 0px 0px 0px;
+    /* padding: 5% 5% 5% 5%; */
+    
     margin-left: auto;
     margin-right: auto;
 }
 .output_div{
-    border-style: solid;
-    border-color: slategray;
+    
+    
     border-width: 4px;    
     border-radius: 5px 5px 5px 5px;
     margin-left:30% ;
@@ -98,6 +121,15 @@ h1,h4{
     text-transform: capitalize;
     
 }
+.middle-a{
+    margin-right: auto;
+    margin-left: 10%;
+}
+.middle-c{
+    margin-left: auto;
+    margin-right: 10%;
+}
+
 
 
 
@@ -106,40 +138,53 @@ h1,h4{
     display: flex;
     
 } */
-
-
-/* @media only screen and (max-width :828px){
- .greet-div-top{
-    display: flex;
-    flex-flow: column;
-    
-}
-.radio-greet-btn{
-    display: flex;
-    flex-flow: row; 
+.shadow{
+    background-color: rgba(199, 165, 53, 0.303);
+    width: 70%;
+    height: auto;
     margin-left: auto;
     margin-right: auto;
-    margin: 2em 2em ;
-    padding: 2em 2em;
-} 
-
-.center{
-     display: flex;
-    flex-flow: column; 
+    margin-top: 130px;
+    margin-bottom: 10px;
+     padding:5% 5% 5% 5%;
+     box-shadow:5px 10px 5px 10px rgba(43, 28, 43, 0.611) ;
+     border-radius: 9% 9% 9% 9%;
 }
 
-.center-b{
-    display: flex;
-    margin-left: auto;
-    margin-right: auto; 
-}
- .span-name{
-    display: flex;
-    flex-flow: column;
-    margin-left: auto;
+
+@media only screen and (max-width :828px){
+   .greetCtrl, label ,.span-name,  .middle{
+        display: flex;
+        flex-flow: column;
+        margin-left: auto;
     margin-right: auto;
-} 
+    margin-top: 1%;
+    margin-bottom: 1%;
+        
+    }
+      button{
+        display: flex;
+        flex-flow: column;
+         width: 85px;
+         margin: 3px 3px 3px 3px;
      
-} */
+        }
+        span{
+            display: flex;
+            flex-flow: column;
+        
+
+        }
+        .japanese, .venda, .latin{
+            display: flex;
+            flex-flow: row-reverse;
+            margin-left: auto;
+            margin-right: auto;
+            flex-basis: auto;
+            
+            padding: 0% 0% 0% 0%;
+        }
+     
+}
 
 
