--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,8 @@
     margin-right: auto;
     
     padding:0px 0px 0px 0px;
-    height: 20px;
+    height: auto;
+    width: fit-content;
     
     
     
